--- a/static/footer.css
+++ b/static/footer.css
@@ -4,8 +4,11 @@ footer
 
 	background: #a7bc7a url(background_menu.png) top left repeat;
 	
-	border: 1px solid blue;
+	border: 1px solid #718743;
 	border-radius: 2px;
+	
+	text-align: center;
+	padding: 5px;
 }
 
 @media all and (max-width: 1024px)
@@ -15,4 +18,12 @@ footer
 		margin-top: 3px;
 	}
 	
+}
+
+@media all and (max-device-width: 480px)
+{
+	footer
+	{
+		background: #a7bc7a;
+	}
 }
