--- a/static/header.css
+++ b/static/header.css
@@ -2,13 +2,22 @@ header
 {
 	display: inline-block;
     text-align: center;
+	
 
 	width: 100%;
-	border: 1px solid blue;
-	border-radius: 2px;
 }
 
-img
+header img
 {
 	width: 80%;
+}
+
+@media all and (max-width: 1024px)
+{
+	header
+	{
+		margin-left: 0%;
+		
+	}
+	
 }
