--- a/templates/bones.html
+++ b/templates/bones.html
@@ -8,7 +8,8 @@
 		<link href="{{ url_for('static', filename='menu.css') }}" rel="stylesheet" type="text/css" />
 		<link href="{{ url_for('static', filename='section.css') }}" rel="stylesheet" type="text/css" />
 		<link href="{{ url_for('static', filename='footer.css') }}" rel="stylesheet" type="text/css" />
-		<title>sYnbioZ</title>
+		<link href="{{ url_for('static', filename='info.css') }}" rel="stylesheet" type="text/css" />
+		<title>sYnbioZis</title>
     </head>
 
     <body>
@@ -25,18 +26,27 @@
 			</ul>
     	</nav>
     	
-    	<section>
-    		<br /><center><h2>Some useless infos.</h2></center><br />
-    	</section>
+    	<div class="info">
+    		Some useless infos
+    	</div>
     	
     	<section>
-    		<br /><center><h1>This is the content of the website !</br /> </br /></br /></br /></br /></br />There is not a lot of things right now...</h1><br />
-    		<h1>Test 2</h1></center><br />
+    		<h1>Title of the first part</h1>
+    		<h2>Title 2</h2>
+    		<p>Illud autem non dubitatur quod cum esset aliquando virtutum omnium domicilium Roma, ingenuos advenas plerique nobilium, ut Homerici bacarum suavitate Lotophagi, humanitatis multiformibus officiis retentabant.</p>
+    		
+    		<p>Alios autem dicere aiunt multo etiam inhumanius (quem locum breviter paulo ante perstrinxi) praesidii adiumentique causa, non benevolentiae neque caritatis, amicitias esse expetendas; itaque, ut quisque minimum firmitatis haberet minimumque virium, ita amicitias appetere maxime; ex eo fieri ut mulierculae magis amicitiarum praesidia quaerant quam viri et inopes quam opulenti et calamitosi quam ii qui putentur beati.</p>
+    		
+    		<p>Huic Arabia est conserta, ex alio latere Nabataeis contigua; opima varietate conmerciorum castrisque oppleta validis et castellis, quae ad repellendos gentium vicinarum excursus sollicitudo pervigil veterum per oportunos saltus erexit et cautos. haec quoque civitates habet inter oppida quaedam ingentes Bostram et Gerasam atque Philadelphiam murorum firmitate cautissimas. hanc provinciae inposito nomine rectoreque adtributo obtemperare legibus nostris Traianus conpulit imperator incolarum tumore saepe contunso cum glorioso marte Mediam urgeret et Parthos.</p>
+    		
+    		<p>Equitis Romani autem esse filium criminis loco poni ab accusatoribus neque his iudicantibus oportuit neque defendentibus nobis. Nam quod de pietate dixistis, est quidem ista nostra existimatio, sed iudicium certe parentis; quid nos opinemur, audietis ex iuratis; quid parentes sentiant, lacrimae matris incredibilisque maeror, squalor patris et haec praesens maestitia, quam cernitis, luctusque declarat.</p>
+    		
+    		<p>Coactique aliquotiens nostri pedites ad eos persequendos scandere clivos sublimes etiam si lapsantibus plantis fruticeta prensando vel dumos ad vertices venerint summos, inter arta tamen et invia nullas acies explicare permissi nec firmare nisu valido gressus: hoste discursatore rupium abscisa volvente, ruinis ponderum inmanium consternuntur, aut ex necessitate ultima fortiter dimicante, superati periculose per prona discedunt.</p>
     	</section>
     	
     	<footer>
-    		<center><h1>It is the End, beautifull friend...</br />My only friend, the End...</h1></center>
-    		
+    		Copyright sYnbioZis<br />
+    		Powered by Kabou    		
     	</footer>
     	
 		
