--- a/static/section.css
+++ b/static/section.css
@@ -3,8 +3,34 @@ section
 	
 	margin-top: 10px;
 	margin-left: 13%;
-	border: 1px solid blue;
-	border-radius: 2px;
+	
+	color: #232323;
+	
+	padding: 0 80px 0 20px;
+	
+	font-family: 'Amble';
+}
+
+section p
+{
+	font-size: 20px;
+	text-indent:40px;
+	text-align: justify;
+	
+	
+}
+
+section h1
+{
+	text-align: center;
+	font-size: 32px;
+}
+
+section h2
+{
+	font-style: italic;
+	text-indent:70px;
+	font-size: 30px;
 }
 
 @media all and (max-width: 1024px)
@@ -14,5 +40,7 @@ section
 		margin-left: 0px;
 		width: 100%;
 		margin-top: 3px;
+		padding: 0 6px 0 0;
 	}
+	
 }
