--- a/static/section.css
+++ b/static/section.css
@@ -16,9 +16,18 @@ section p
 	font-size: 20px;
 	text-indent:40px;
 	text-align: justify;
-	
-	
 }
+
+
+section .news
+{
+	font-size: 20px;
+	text-indent:40px;
+	text-align: justify;
+	border-bottom: 2px solid black;
+	padding-bottom: 30px;
+}
+
 
 section h1
 {
