--- a/static/menu.css
+++ b/static/menu.css
@@ -6,7 +6,7 @@ nav
 	
 	width: 12%;
 	
-	background: #a7bc7a url(background_menu.png) top left repeat;
+	background: #a9b189 url(background_menu.png) top left repeat;
 
 	font-size: 25px;
 	
