--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,7 @@ a
 
 body
 {
-	background: #ecffe6 url(background_body.png) top left repeat;
+	background: #e8e9e6 url(background_body.png) top left repeat;
 }
 
 @font-face
