--- a/static/footer.css
+++ b/static/footer.css
@@ -2,8 +2,8 @@ footer
 {
 	margin-top: 10px;
 
-	background: #a7bc7a url(background_menu.png) top left repeat;
-	
+	background: #a9b189 url(background_menu.png) top left repeat;
+	/* #a7bc7a */
 	border: 1px solid #718743;
 	border-radius: 2px;
 	
