--- a/static/menu.css
+++ b/static/menu.css
@@ -26,7 +26,7 @@ nav ul li
 	list-style-type:none;
 }
 
-nav ul li:hover
+nav ul li:hover a
 {
 	color: #586835;
 	text-shadow: -1px 1px 4px #bdcd9c;
