--- a/templates/bones.html
+++ b/templates/bones.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	{% block head %}
 		<meta name="keywords" content="synbioz, sYnbioZ, synbiozis, sYnbioZis, python, tk, .tk" />
 		<meta charset="UTF-8" />
 		<link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css" />
@@ -10,8 +9,7 @@
 		<link href="{{ url_for('static', filename='section.css') }}" rel="stylesheet" type="text/css" />
 		<link href="{{ url_for('static', filename='footer.css') }}" rel="stylesheet" type="text/css" />
 		<link href="{{ url_for('static', filename='info.css') }}" rel="stylesheet" type="text/css" />
-		<title>sYnbioZis</title>
-		{% endblock %}
+		<title>sYnbioZis - {% block title %}{% endblock %}</title>
     </head>
 
     <body>
@@ -21,23 +19,44 @@
     	
     	<nav>
  			<ul>
- 				<a href="{{ url_for('index') }}"><li>Acceuil</li></a>
- 				<a href="{{ url_for('news') }}"><li>News</li></a>
-    			<a href="#"><li>...</li></a>
+ 				<li><a href="{{ url_for('index') }}">Acceuil</a></li>
+ 				<li><a href="{{ url_for('clip') }}">Clip</a></li>
+ 				<li><a href="{{ url_for('bones') }}">Notifications</a></li>
 			</ul>
     	</nav>
     	
-    	{% block info %}
-    	<div class="info">
-    		Some useless infos
-    	</div>
-    	{% endblock %}
+    	<!-- Infos Messages -->
     	
-    	{% block section %}
+    	
+    	{% with msg = get_flashed_messages(category_filter=["error"]) %}
+    	{% if msg %}
+			<div class="info_error">
+			<ul>
+	        {% for m in msg %}
+	            <li>{{ m }}</li>
+	        {% endfor %}
+	        </ul>
+			</div>
+		{% endif %}
+	    {% endwith %}
+	    
+		{% with msg = get_flashed_messages(category_filter=["success"]) %}
+	    {% if msg %}
+			<div class="info_success">
+			<ul>
+	        {% for m in msg %}
+	            <li>{{ m }}</li>
+	        {% endfor %}
+	        </ul>
+			</div>
+		{% endif %}
+	    {% endwith %}
+    	
+    	
     	<section>
-    		<h1>{% block section_title %}Title of the first part{% endblock %}</h1>
+    		<h1>{{ self.title() }}</h1>
     		<!-- <h2>Title 2</h2> -->
-    		{% block section_content %}<p>Illud autem non dubitatur quod cum esset aliquando virtutum omnium domicilium Roma, ingenuos advenas plerique nobilium, ut Homerici bacarum suavitate Lotophagi, humanitatis multiformibus officiis retentabant.</p>
+    		{% block section %}<p>Illud autem non dubitatur quod cum esset aliquando virtutum omnium domicilium Roma, ingenuos advenas plerique nobilium, ut Homerici bacarum suavitate Lotophagi, humanitatis multiformibus officiis retentabant.</p>
     		
     		<p>Alios autem dicere aiunt multo etiam inhumanius (quem locum breviter paulo ante perstrinxi) praesidii adiumentique causa, non benevolentiae neque caritatis, amicitias esse expetendas; itaque, ut quisque minimum firmitatis haberet minimumque virium, ita amicitias appetere maxime; ex eo fieri ut mulierculae magis amicitiarum praesidia quaerant quam viri et inopes quam opulenti et calamitosi quam ii qui putentur beati.</p>
     		
@@ -47,8 +66,7 @@
     		
     		<p>Coactique aliquotiens nostri pedites ad eos persequendos scandere clivos sublimes etiam si lapsantibus plantis fruticeta prensando vel dumos ad vertices venerint summos, inter arta tamen et invia nullas acies explicare permissi nec firmare nisu valido gressus: hoste discursatore rupium abscisa volvente, ruinis ponderum inmanium consternuntur, aut ex necessitate ultima fortiter dimicante, superati periculose per prona discedunt.</p>{% endblock %}
     	</section>
-    	
-    	{% endblock %}
+
     	
     	
     	<footer>
