--- a/static/info.css
+++ b/static/info.css
@@ -1,8 +1,8 @@
 .info_success, .info_error
 {
-	width: 80;
+	width: 80%;
 	margin-top: 10px;
-	margin-left: 13%;
+	margin-left: 14%;
 	
 	border-radius: 15px 3px 20px 3px;
 	
