--- a/templates/clip.html
+++ b/templates/clip.html
@@ -6,7 +6,7 @@
 <center>
 {% for elt in videos %}
 	{% if elt != "" %}
-	<iframe width="420" height="315" src="{{ elt }}" frameborder="0" allowfullscreen></iframe><br /><br />
+	<iframe width="420" height="315" src="{{ elt }}" frameborder="0" allowfullscreen></iframe><br />
 	{% endif %}
 {% endfor %}
 </center>
