--- a/templates/test.html
+++ b/templates/test.html
@@ -3,5 +3,11 @@
 {% block title %}Test{% endblock %}
 
 {% block section %}
-test
+{% for clip in clips %}
+    <h2>{{ clip[1] }}</h2>
+    <iframe width="420" height="315" src="{{ clip[2] }}" frameborder="0" allowfullscreen></iframe><br />
+    {{ clip[3] }}
+
+{% endfor %}
+
 {% endblock %}
