--- a/static/section.css
+++ b/static/section.css
@@ -42,6 +42,29 @@ section h2
 	font-size: 30px;
 }
 
+
+
+section form
+{
+	text-align: center;
+	border: 2px solid gray;
+	padding: 15px;	
+	
+}
+
+
+section form input
+{
+
+	margin: 10px;
+
+}
+
+
+
+
+
+
 @media all and (max-width: 1024px)
 {
 	section
