--- a/templates/clip.html
+++ b/templates/clip.html
@@ -4,11 +4,10 @@
 
 {% block section %}
 <center>
-{% set clip = ["1", "First Clip", "//www.youtube.com/embed/aGw7gBU1qOs", "<p>Illud autem non dubitatur quod cum esset aliquando virtutum omnium domicilium Roma, ingenuos advenas plerique nobilium, ut Homerici bacarum suavitate Lotophagi, humanitatis multiformibus officiis retentabant.</p><p>Alios autem dicere aiunt multo etiam inhumanius (quem locum breviter paulo ante perstrinxi) praesidii adiumentique causa, non benevolentiae neque caritatis, amicitias esse expetendas; itaque, ut quisque minimum firmitatis haberet minimumque virium, ita amicitias appetere maxime; ex eo fieri ut mulierculae magis amicitiarum praesidia quaerant quam viri et inopes quam opulenti et calamitosi quam ii qui putentur beati.</p><p>Huic Arabia est conserta, ex alio latere Nabataeis contigua; opima varietate conmerciorum castrisque oppleta validis et castellis, quae ad repellendos gentium vicinarum excursus sollicitudo pervigil veterum per oportunos saltus erexit et cautos. haec quoque civitates habet inter oppida quaedam ingentes Bostram et Gerasam atque Philadelphiam murorum firmitate cautissimas. hanc provinciae inposito nomine rectoreque adtributo obtemperare legibus nostris Traianus conpulit imperator incolarum tumore saepe contunso cum glorioso marte Mediam urgeret et Parthos.</p>"] %}
-
+{% for clip in clips %}
     <h2>{{ clip[1] }}</h2>
     <iframe width="420" height="315" src="{{ clip[2] }}" frameborder="0" allowfullscreen></iframe><br />
     <div class = "clip">{{ clip[3] }}</div>
-
+{% endfor %}
 </center>
 {% endblock %}
