--- a/static/info.css
+++ b/static/info.css
@@ -3,9 +3,11 @@
 	width: 80%;
 	margin-top: 10px;
 	margin-left: 14%;
-	
+
 	border-radius: 15px 3px 20px 3px;
-	
+
+    background: #eeffd8 url(background_info.png) top left repeat;
+
 	font-family: Comic Sans MS;
 	font-size: 20px;
 	text-align: center;
@@ -19,7 +21,7 @@
 
 .info_success
 {
-	background: #eeffd8 url(background_info.png) top left repeat;
+
 	color: #718743;
 	border: 2px solid #718743;
 	box-shadow: 1px 1px 5px #5b7018;
@@ -27,11 +29,11 @@
 
 .info_error
 {
-	background: #ffcfcf url(background_info.png) top left repeat;
+	background-color: #ffcfcf;
 	color: #ae3c3c;
 	border: 2px solid #ae3c3c;
 	box-shadow: 1px 1px 5px #f69999;
-	
+
 }
 
 @media all and (max-width: 1024px)
@@ -41,10 +43,10 @@
 		margin-left: 9%;
 		width: 80%;
 		margin-top: 3px;
-		
+
 		box-shadow: none;
 		border-radius: 10px 3px 12px 3px;
-		
+
 	}
 }
 
