--- a/static/section.css
+++ b/static/section.css
@@ -1,13 +1,13 @@
 section
 {
-	
+
 	margin-top: 10px;
 	margin-left: 13%;
-	
+
 	color: #232323;
-	
+
 	padding: 0 80px 0 20px;
-	
+
 	font-family: 'Amble';
 }
 
@@ -40,16 +40,25 @@ section h2
 	font-style: italic;
 	text-indent:70px;
 	font-size: 30px;
+    color: #232323;
 }
 
+section h2 a
+{
+    color: #232323;
+}
 
+section h2:hover a
+{
+    color: #3a3a3a;
+}
 
 section form
 {
 	text-align: center;
 	border: 2px solid gray;
-	padding: 15px;	
-	
+	padding: 15px;
+
 }
 
 
@@ -74,5 +83,5 @@ section form input
 		margin-top: 3px;
 		padding: 0 6px 0 0;
 	}
-	
+
 }
