--- a/templates/bones.html
+++ b/templates/bones.html
@@ -23,14 +23,17 @@
  				<li><a href="{{ url_for('index') }}">Acceuil</a></li>
  				<li><a href="{{ url_for('clip') }}">Clip</a></li>
  				<li><a href="{{ url_for('bones') }}">Notifications</a></li>
+                <li>Upload
+                    <ul>
+                        <li><a href="{{ url_for('uploadClip') }}" >Clip</a></li>
+                        <li><a href="{{ url_for('uploadNews') }}">News</a></li>
+                    </ul>
+                </li>
 			</ul>
 
 			<a href="#"> <img src="{{ url_for('static', filename='image/up.svg') }}" width="40" height="40" alt="up" /></a>
 
     	</nav>
-
-    	<!-- Infos Messages -->
-
 
     	{% with msg = get_flashed_messages(category_filter=["error"]) %}
     	{% if msg %}
@@ -59,7 +62,6 @@
 
     	<section>
     		<h1>{{ self.title() }}</h1>
-    		<!-- <h2>Title 2</h2> -->
     		{% block section %}<p>Illud autem non dubitatur quod cum esset aliquando virtutum omnium domicilium Roma, ingenuos advenas plerique nobilium, ut Homerici bacarum suavitate Lotophagi, humanitatis multiformibus officiis retentabant.</p>
 
     		<p>Alios autem dicere aiunt multo etiam inhumanius (quem locum breviter paulo ante perstrinxi) praesidii adiumentique causa, non benevolentiae neque caritatis, amicitias esse expetendas; itaque, ut quisque minimum firmitatis haberet minimumque virium, ita amicitias appetere maxime; ex eo fieri ut mulierculae magis amicitiarum praesidia quaerant quam viri et inopes quam opulenti et calamitosi quam ii qui putentur beati.</p>
@@ -69,7 +71,6 @@
     		<p>Equitis Romani autem esse filium criminis loco poni ab accusatoribus neque his iudicantibus oportuit neque defendentibus nobis. Nam quod de pietate dixistis, est quidem ista nostra existimatio, sed iudicium certe parentis; quid nos opinemur, audietis ex iuratis; quid parentes sentiant, lacrimae matris incredibilisque maeror, squalor patris et haec praesens maestitia, quam cernitis, luctusque declarat.</p>
 
     		<p>Coactique aliquotiens nostri pedites ad eos persequendos scandere clivos sublimes etiam si lapsantibus plantis fruticeta prensando vel dumos ad vertices venerint summos, inter arta tamen et invia nullas acies explicare permissi nec firmare nisu valido gressus: hoste discursatore rupium abscisa volvente, ruinis ponderum inmanium consternuntur, aut ex necessitate ultima fortiter dimicante, superati periculose per prona discedunt.</p>
-    	    <p>TEST</p>
             {% endblock %}
 
     	</section>
@@ -78,7 +79,7 @@
 
     	<footer>
     		Copyright sYnbioZis<br />
-    		Powered by Kabou
+    		Powered by Flask
     	</footer>
 
 
