--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,7 +4,7 @@
 
 {% block section %}
 
-<form action="" method="post">
+<form action="#" method="post">
 	<label for="title">Titre : </label><input type="text" name="title" id="title" placeholder="Titre" /><br />
 	<label for="address">Addresse : </label><input type="text" name="address" id="address" placeholder="Addresse" /><br /><br />
 
