--- a/templates/uploadNews.html
+++ b/templates/uploadNews.html
@@ -4,10 +4,10 @@
 
 {% block section %}
 
-<form action="" method="post">
+<form action="#" method="post">
     <label for="title">Titre : </label><input type="text" name="title" id="title" placeholder="Titre" /><br /><br />
 
-	<label for="comment">Contenu : </label><br /><textarea name="content" id="content" placeholder="Bla bla bla..."></textarea><br /><br />
+	<label for="content">Contenu : </label><br /><textarea name="content" id="content" placeholder="Bla bla bla..."></textarea><br /><br />
 
 	<label for="pass">Mot de Passe</label><input type="password" name="pass" id="pass" placeholder = "Mot de passe" /><br />
 	<input type="submit" value="Envoyer" />
