--- a/static/clip.css
+++ b/static/clip.css
@@ -1,6 +1,13 @@
 iframe
 {
 	padding: 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 600px;
+    height: 450px;
+
+    border: none;
 }
 
 .clip
@@ -8,6 +15,7 @@ iframe
 	border-bottom: 2px solid black;
 	border-radius: 8px;
 	padding: 50px;
+    text-align: center;
 }
 
 @media all and (max-width: 1024px)
