--- a/templates/clip.html
+++ b/templates/clip.html
@@ -3,11 +3,11 @@
 {% block title %}Clip{% endblock %}
 
 {% block section %}
-<center>
+
 {% for clip in clips %}
     <h2>{{ clip[1] }}</h2>
-    <iframe width="420" height="315" src="{{ clip[2] }}" frameborder="0" allowfullscreen></iframe><br />
+    <iframe width="420" height="315" src="{{ clip[2] }}"></iframe><br />
     <div class = "clip">{{ clip[3] }}</div>
 {% endfor %}
-</center>
+
 {% endblock %}
