--- a/templates/clip.html
+++ b/templates/clip.html
@@ -4,7 +4,7 @@
 
 {% block section %}
 
-{% for clip in clips %}
+{% for clip in clips() %}
     <h2>{{ clip[1] }}</h2>
     <iframe width="420" height="315" src="{{ clip[2] }}"></iframe><br />
     <div class = "clip">{{ clip[3] }}</div>
