--- a/static/style_blue.css
+++ b/static/style_blue.css
@@ -5,8 +5,7 @@ a
 
 body
 {
-	background: #e8e9e6 url(background_body.png) top left repeat;
-	/*background: #e8e9e6 url(back_submit.png) top left repeat;*/
+	background: #e9f6fb url(background_body.png) top left repeat;
 }
 
 
