--- a/static/footer.css
+++ b/static/footer.css
@@ -2,9 +2,9 @@ footer
 {
 	margin-top: 10px;
 
-	background: #a9b189 url(background_menu.png) top left repeat;
-	/* #a7bc7a */
-	border: 1px solid #718743;
+	background: #a3a3a7 url(b.png) top left repeat;
+    /* #93a7c7 */
+	box-shadow: 0 -4px 4px #e8e7e7; /* 1px solid #8299be; */
 	border-radius: 2px;
 
 	text-align: center;
