--- a/static/form.css
+++ b/static/form.css
@@ -1,13 +1,18 @@
 section form
 {
 	text-align: center;
-	padding: 15px;
+	padding: 10px;
     font-size: 22px;
 }
 
 section form legend
 {
-    font-weight:bold;
+    font-weight: bold;
+}
+
+section form legend:hover
+{
+    color: #3a3a3a;
 }
 
 section form input, textarea
@@ -32,21 +37,6 @@ section form textarea
     padding: 10px 10px;
 }
 
-section form input[type='submit']
-{
-    border: 1px solid #686868;
-    padding: 0 45px;
-
-    height: 30px;
-
-    cursor: pointer;
-    background: #a3ab83 url(back_submit.png) top left repeat;
-
-    color: #31433f;
-
-    border-radius: 30px;
-}
-
 section form input[type='radio']
 {
     margin: 10px;
@@ -60,30 +50,34 @@ section form input[type='radio']
     padding: 0;
 }
 
-
-@keyframes submit
+section form input[type='submit']
 {
-0% {box-shadow: 3px -3px 4px #a3ab83;}
-28% {box-shadow: -4px -4px 4px #a3ab83;}
-66% {box-shadow: -1px 4px 5px #a3ab83;}
-100% {box-shadow: 4px 4px 7px #a3ab83;}
+    border: 1px solid #68687d;
+    padding: 0 45px;
+
+    height: 30px;
+
+    cursor: pointer;
+    background: #7f96bd url(back_submit.png) top left repeat;
+
+    color: #1b3645;
+
+    border-radius: 30px;
+
+    box-shadow: 0 3px 6px rgba(255, 255, 255, 0.7) inset;
+
+    transition: box-shadow 0.5s;
+
 }
 
-@-webkit-keyframes submit  /* Safari and Chrome */
-{
-0% {box-shadow: 3px -3px 4px #a3ab83;}
-28% {box-shadow: -4px -4px 4px #a3ab83;}
-66% {box-shadow: -1px 4px 5px #a3ab83;}
-100% {box-shadow: 4px 4px 7px #a3ab83;}
-}
 
 section form input[type='submit']:hover
 {
-    animation: submit 0.7s ease-in;
-    -webkit-animation: submit 0.7s ease-in; /* Safari and Chrome */
-    box-shadow: 4px 4px 7px #a3ab83;
+    box-shadow: 0 2px 2px rgba(255, 255, 255, 0.8) inset;
 
 }
+
+
 
 section legend
 {
@@ -109,12 +103,3 @@ section legend
 
 
 }
-
-
-
-
-
-
-
-
-
