--- a/templates/bones.html
+++ b/templates/bones.html
@@ -3,11 +3,11 @@
     <head>
 		<meta name="keywords" content="synbioz, sYnbioZ, synbiozis, sYnbioZis, python, tk, .tk" />
 		<meta charset="UTF-8" />
-		<link href="{{color['style']}}" rel="stylesheet" type="text/css" />
-		<link href="{{color['form']}}" rel="stylesheet" type="text/css" />
-		<link href="{{color['menu']}}" rel="stylesheet" type="text/css" />
+		<link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css" />
+		<link href="{{ url_for('static', filename='form.css') }}" rel="stylesheet" type="text/css" />
+		<link href="{{ url_for('static', filename='menu.css') }}" rel="stylesheet" type="text/css" />
 		<link href="{{ url_for('static', filename='section.css') }}" rel="stylesheet" type="text/css" />
-		<link href="{{color['footer']}}" rel="stylesheet" type="text/css" />
+		<link href="{{ url_for('static', filename='footer.css') }}" rel="stylesheet" type="text/css" />
 		<link href="{{ url_for('static', filename='info.css') }}" rel="stylesheet" type="text/css" />
 		<link href="{{ url_for('static', filename='clip.css') }}" rel="stylesheet" type="text/css" />
 		<title>sYnbioZis - {% block title %}{% endblock %}</title>
@@ -25,6 +25,12 @@
                         <li><a href="{{ url_for('uploadNews') }}">News</a></li>
                     </ul>
                 </li>
+                <li><span class="roll">Python</span>
+                    <ul>
+                        <li><a href="{{ url_for('ann') }}" >Perceptron</a></li>
+                    </ul>
+                </li>
+                <li><a href = "{{ url_for('tests') }}">Clip</a></li>
 			</ul>
 			<img src='{{ url_for('static', filename='image/setting.svg') }}' width="40" height="40" alt="up" />
     	</nav>
